--- a/app/sass/_site.scss
+++ b/app/sass/_site.scss
@@ -1,12 +1,13 @@
 .site {
   &__container {
-    max-width: 1200px;
+    max-width: 120rem;
     width: 100vw;
     display: flex;
     flex-flow: column;
     min-height: 100vh;
     margin: auto;
   }
+
   &__content {
     flex-grow: 2;
   }
