--- a/app/sass/_variables.scss
+++ b/app/sass/_variables.scss
@@ -4,3 +4,4 @@ $body-font-size: 1.6rem;
 $border-color: #666;
 $bg-color: #fff;
 $border-default: $atom/2 solid $border-color;
+$breakpoint: 41.5rem;
