--- a/app/sass/_blog.scss
+++ b/app/sass/_blog.scss
@@ -9,7 +9,9 @@
     flex-flow: column;
 
     img {
-      max-width: 100vw;
+      max-width: 70vw;
+      margin-left: 50%;
+      transform: translateX(-50%);
     }
 
     h1 {
@@ -22,9 +24,14 @@
       margin-bottom: 8px;
     }
 
-    p, em, code {
+    p, em, code, li, a {
       font-size: 1.6rem;
       margin-bottom: 4px;
+    }
+
+    li {
+      margin-left: 2rem;
+      list-style: disc;
     }
 
     code {
